@@ -553,6 +553,7 @@ All (GUI):
 - Restore the original wxGrid col/row size when unhiding it (Michael Richards).
 - Fix text origin and extent computations in wxSVGFileDC (Neil Chittenden).
 - Show tooltips for the too long items in generic wxTreeCtrl (Steven Houchins).
+- Add wxStyledTextCtrl::AnnotationClearLine() (sentieshar).
 
 wxGTK:
 
